// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavbarItem default 1`] = `
<a
  className="'navbar-item' undefined"
  href="http://link"
>
  title
</a>
`;

exports[`Storyshots NavbarItem when isActive is true 1`] = `
<a
  className="'navbar-item' navbar-item-active"
  href="http://link"
>
  title
</a>
`;
